fixed issue with video play button not being properly centered on ie11

--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -47,7 +47,6 @@
   &__play-button
     cursor: pointer
     fill: $color-white
-    position: absolute
     transition: $main-transition-duration
     width: 20%
 
